--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -80,8 +80,8 @@ header a {
 }
 
 .deleteIcon{
-  height:30px;
-  width:30px;
+  height:25px;
+  width:25px;
 }
 
 /* new item sector */
@@ -113,4 +113,7 @@ div.error {
   color: var(--error);
   border-radius: 4px;
   margin: 20px 0;
+}
+input.error{
+  border:1px solid var(--error);
 }
