--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -80,8 +80,15 @@ header a {
 }
 
 .deleteIcon {
-  height: 25px;
-  width: 25px;
+  height: 35px;
+  width: 35px;
+}
+
+.addToCartIcon {
+  height: 35px;
+  width: 40px;
+  position: relative;
+  top: 3px;
 }
 
 /* new item sector */
