scraping quiksilver instead horsefeathers and fix some
catch and show 2 pictures for each item,
change some style for the images,
and some small changes in front also

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,8 +67,9 @@ header a {
   color: rgb(197, 6, 6);
 }
 .imgItem {
-  position: relative;
-  left: 40%;
+  /* position: relative; */
+  padding: 6px;
+  /* left: 40%; */
   height: 250px;
   width: 250px;
   opacity: 75%;
