--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,8 +34,12 @@ header a {
 
 /* homepage */
 .home {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
   /* display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
   gap: 100px; */
 }
 .item-details {
