--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -193,5 +193,5 @@ input.error {
   margin-top: 25px;
   border: 1px solid black;
   position: absolute;
-  margin-left: 900px;
+  margin-left: 72%;
 }
